# EcofunctionalPerceptron

./: .editorconfig  .gitignore  CMakeLists.txt  DDD_Teste_Treinamento_Perceptron_Ecofuncional.tex  Detalhamento_Implementacao.tex  LICENSE  README.md  data_loader.cpp  data_loader.h  dataset.cpp  domain.cpp  domain.h  main.cpp  perceptron.cpp  plot_trajectory.py  services.cpp  services.h  training_data.csv  trajectory_data.csv
data/: training_data.csv
docs/: DDD_Teste_Treinamento_Perceptron_Ecofuncional.md  DDD_Teste_Treinamento_Perceptron_Ecofuncional.tex  Detalhamento_Implementacao.md  Detalhamento_Implementacao.tex
include/: dataset.h  domain.h  perceptron.h
scripts/: plot_trajectory.py
src/: data_loader.cpp  dataset.cpp  main.cpp  perceptron.cpp  services.cpp
